# regolith_voxel

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
docs/: cellular_automata.md
src/: main.rs
