[package]
name = "regolith_voxel"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Experimental mining simulation exploring indirect control of semi-autonomous agents and reinforcement learning"
repository = "https://github.com/kyjohnso/regolith_voxel"

[dependencies]
bevy = "0.16.1"
bevy_egui = "0.34.0"
noise = "0.9"
rand = "0.8"
egui_tiles = "0.11"
egui-arbor = "0.2"
